// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchHelp should not render if not open 1`] = `<DocumentFragment />`;

exports[`SearchHelp should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll flex items-center justify-center"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb kNSjES absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxiKw eWLnbL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Search
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-neutral-dark"
          >
            Quickly find the right answers to any questions
          </div>
          <div
            class="-mx-10"
          >
            <div
              class="bg-theme-neutral-contrast px-10 pt-8 pb-8 mt-8"
              data-testid="SearchBar"
            >
              <div
                class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
              >
                <div
                  class="flex items-center pr-8 my-1"
                  data-testid="SearchBarOptions"
                >
                  <div
                    class="relative"
                    data-testid="dropdown__toggle"
                  >
                    <span
                      class="flex font-semibold cursor-pointer select-none"
                    >
                      All
                      <svg
                        class="inline-block w-2 ml-2 text-black"
                      >
                        chevron-down.svg
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
                >
                  <input
                    class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                    data-testid="Input"
                    placeholder="What would you like to search for?"
                  />
                </div>
                <button
                  class="sc-AxiKw gQbnsc my-1"
                  color="primary"
                  data-testid="SearchBar__button"
                  type="button"
                >
                  <span
                    class="px-2 text-md"
                  >
                    Find it
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="mt-8"
            >
              <div
                class="sc-fzplWN bQDGiE"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      role="row"
                    >
                      <th
                        class="text-sm text-left select-none text-theme-neutral"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top "
                        >
                          <div>
                            Title
                          </div>
                          <div
                            class="flex items-center ml-2 text-theme-color-neutral"
                            data-testid="table__Sort"
                          >
                            <div
                              class="sc-AxjAm hdgaLj"
                              height="12"
                              width="15"
                            >
                              <svg>
                                sort.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="text-sm text-left select-none text-theme-neutral"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top "
                        >
                          <div>
                            Category
                          </div>
                          <div
                            class="flex items-center ml-2 text-theme-color-neutral"
                            data-testid="table__Sort"
                          >
                            <div
                              class="sc-AxjAm hdgaLj"
                              height="12"
                              width="15"
                            >
                              <svg>
                                sort.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  >
                    <tr
                      class="transition-colors duration-100 border-b border-dashed last:border-b-0 border-theme-neutral-200 group"
                    >
                      <td>
                        <div
                          class="sc-fznyAO flMqkx pr-8"
                        >
                          <div
                            class="font-semibold"
                          >
                            How do I install the plugin?
                          </div>
                          <div
                            class="mt-2 text-sm text-theme-neutral-dark"
                          >
                            ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="sc-fznyAO gkWUHf text-sm justify-end"
                        >
                          <div>
                            Plugin
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="transition-colors duration-100 border-b border-dashed last:border-b-0 border-theme-neutral-200 group"
                    >
                      <td>
                        <div
                          class="sc-fznyAO flMqkx pr-8"
                        >
                          <div
                            class="font-semibold"
                          >
                            Installing the side plugin
                          </div>
                          <div
                            class="mt-2 text-sm text-theme-neutral-dark"
                          >
                            ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="sc-fznyAO gkWUHf text-sm justify-end"
                        >
                          <div>
                            Plugin
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="transition-colors duration-100 border-b border-dashed last:border-b-0 border-theme-neutral-200 group"
                    >
                      <td>
                        <div
                          class="sc-fznyAO flMqkx pr-8"
                        >
                          <div
                            class="font-semibold"
                          >
                            If the plugin is not installed, what do we do?
                          </div>
                          <div
                            class="mt-2 text-sm text-theme-neutral-dark"
                          >
                            ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                          </div>
                        </div>
                      </td>
                      <td>
                        <div
                          class="sc-fznyAO gkWUHf text-sm justify-end"
                        >
                          <div>
                            Plugin
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchHelp should render a modal 2`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 w-full h-full overflow-y-scroll flex items-center justify-center"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxhCb kNSjES absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxiKw eWLnbL w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxjAm hSsKJo"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Search
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-neutral-dark"
          >
            Quickly find the right answers to any questions
          </div>
          <div
            class="-mx-10"
          >
            <div
              class="bg-theme-neutral-contrast px-10 pt-8 pb-8 mt-8"
              data-testid="SearchBar"
            >
              <div
                class="flex items-center px-10 py-6 bg-white rounded shadow-xl"
              >
                <div
                  class="flex items-center pr-8 my-1"
                  data-testid="SearchBarOptions"
                >
                  <div
                    class="relative"
                    data-testid="dropdown__toggle"
                  >
                    <span
                      class="flex font-semibold cursor-pointer select-none"
                    >
                      Delegate
                      <svg
                        class="inline-block w-2 ml-2 text-black"
                      >
                        chevron-down.svg
                      </svg>
                    </span>
                  </div>
                </div>
                <div
                  class="flex-1 pl-4 mr-4 border-l border-theme-neutral-200"
                >
                  <input
                    class="sc-AxhUy jqmzti overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 border-none shadow-none"
                    data-testid="Input"
                    placeholder="What would you like to search for?"
                  />
                </div>
                <button
                  class="sc-AxiKw gQbnsc my-1"
                  color="primary"
                  data-testid="SearchBar__button"
                  type="button"
                >
                  <span
                    class="px-2 text-md"
                  >
                    Find it
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="mt-8"
          >
            <div
              class="mt-8"
            >
              <div
                class="sc-fzplWN bQDGiE"
                role="table"
              >
                <table
                  cellpadding="0"
                  class="table-auto"
                >
                  <thead>
                    <tr
                      role="row"
                    >
                      <th
                        class="text-sm text-left select-none text-theme-neutral"
                        colspan="1"
                        data-testid="table__th--0"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top "
                        >
                          <div>
                            Title
                          </div>
                          <div
                            class="flex items-center ml-2 text-theme-color-neutral"
                            data-testid="table__Sort"
                          >
                            <div
                              class="sc-AxjAm hdgaLj"
                              height="12"
                              width="15"
                            >
                              <svg>
                                sort.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                      <th
                        class="text-sm text-left select-none text-theme-neutral"
                        colspan="1"
                        data-testid="table__th--1"
                        role="columnheader"
                        style="cursor: pointer;"
                        title="Toggle SortBy"
                      >
                        <div
                          class="flex flex-inline align-top "
                        >
                          <div>
                            Category
                          </div>
                          <div
                            class="flex items-center ml-2 text-theme-color-neutral"
                            data-testid="table__Sort"
                          >
                            <div
                              class="sc-AxjAm hdgaLj"
                              height="12"
                              width="15"
                            >
                              <svg>
                                sort.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    role="rowgroup"
                  />
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
